update css file to fix viewing on mobile

--- a/css/main_css.css
+++ b/css/main_css.css
@@ -302,5 +302,11 @@ a{color:$linkColor; text-decoration:none;}
     height: auto;
   }
   
+  .left-sidebar, .right-content {
+    width: 100%;
+    float: none; /* If using older float layouts */
+    margin-bottom: 20px;
+  }
+  
 }
 
